styling the radio type inputs

--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -19,12 +19,18 @@
       <input type="password" name="user-password" id="UPassword">
       <hr>
       <h2>How can we verify ur account?</h2>
-      <input type="radio" name="VMessage" id="message">
-      <label for="message">SMS</label>
-      <input type="radio" name="VEmail" id="email">
-      <label for="email">Email</label>
-      <input type="radio" name="VPhone" id="phone">
-      <label for="phone">Phone call</label>
+      <div class="form-control-inline">
+         <input type="radio" name="verify" id="message">
+         <label for="message">SMS</label>
+      </div>
+      <div class="form-control-inline">
+         <input type="radio" name="verify" id="message">
+         <label for="message">Email</label>
+      </div>
+      <div class="form-control-inline">
+         <input type="radio" name="verify" id="phone">
+         <label for="phone">Phone call</label>
+      </div>
       <button>ADD</button>
    </form>
 
