--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -31,6 +31,12 @@
          <input type="radio" name="verify" id="phone">
          <label for="phone">Phone call</label>
       </div>
+
+      <div class="form-control-inline">
+         <input type="checkbox" name="terms" id="ATerms">
+         <label for="ATerms">U Agree to terms?</label>
+      </div>
+      
       <button>ADD</button>
    </form>
 
