adding a text area

--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -9,6 +9,8 @@
 
 <body>
    <form action="/user.data" method="post">
+      <label for="hear">How did u hear about this site?</label>
+      <textarea id="hear"></textarea>
       <label for="UName">Ur name</label>
       <input type="text" id="UName">
       <label for="UEmail">Ur email</label>
@@ -36,7 +38,9 @@
          <input type="checkbox" name="terms" id="ATerms">
          <label for="ATerms">U Agree to terms?</label>
       </div>
+
       
+
       <button>ADD</button>
    </form>
 
