--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -19,6 +19,12 @@
       <input type="number" name="user-age" id="UAge">
       <label for="UPassword">Ur password</label>
       <input type="password" name="user-password" id="UPassword">
+      <label for="fav-color">What is ur favorite color?</label>
+      <select name="favorite-color" id="fav-color">
+         <option>Red</option>
+         <option>Blue</option>
+         <option>Orange</option>
+      </select>
       <hr>
       <h2>How can we verify ur account?</h2>
       <div class="form-control-inline">
