adding some things

--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -12,7 +12,7 @@
       <label for="hear">How did u hear about this site?</label>
       <textarea id="hear"></textarea>
       <label for="UName">Ur name</label>
-      <input type="text" id="UName">
+      <input type="text" id="UName" value="Ned">
       <label for="UEmail">Ur email</label>
       <input type="email" name="user-email" id="UEmail">
       <label for="UAge">Ur age</label>
@@ -45,7 +45,7 @@
          <label for="ATerms">U Agree to terms?</label>
       </div>
 
-      
+
 
       <button>ADD</button>
    </form>
