--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -19,6 +19,8 @@
       <input type="number" name="user-age" id="UAge" required min="18" max="100">
       <label for="UPassword">Ur password</label>
       <input type="password" name="user-password" id="UPassword" required minlength="8">
+      <label for="birthday">Birthday:</label>
+      <input type="date" id="birthday" name="birthday">
       <label for="fav-color">What is ur favorite color?</label>
       <select name="favorite-color" id="fav-color">
          <option>Red</option>
