--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -12,7 +12,7 @@
       <label for="hear">How did u hear about this site?</label>
       <textarea id="hear"></textarea>
       <label for="UName">Ur name</label>
-      <input type="text" id="UName" value="Ned">
+      <input type="text" id="UName" value="Ned" required>
       <label for="UEmail">Ur email</label>
       <input type="email" name="user-email" id="UEmail">
       <label for="UAge">Ur age</label>
@@ -26,7 +26,7 @@
          <option>Red</option>
          <option>Blue</option>
          <option>Orange</option>
-      </select>
+      </select required>
       <hr>
       <h2>How can we verify ur account?</h2>
       <div class="form-control-inline">
