adding a required age

--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -20,7 +20,7 @@
       <label for="UPassword">Ur password</label>
       <input type="password" name="user-password" id="UPassword" required minlength="8">
       <label for="birthday">Birthday:</label>
-      <input type="date" id="birthday" name="birthday">
+      <input type="date" id="birthday" name="birthday" required min="1921-01-01" max="2005-01-01">
       <label for="fav-color">What is ur favorite color?</label>
       <select name="favorite-color" id="fav-color">
          <option>Red</option>
